==> aoi-256/finani_ICM42688_for_STM32/src/ICM42688.cpp <==
#include "ICM42688.h"
#include "registers.h"
#include <math.h>
#include <cstring>
#define PI 3.14159

int ICM42688::writeRegister(uint8_t subAddress, uint8_t data) {

    uint8_t tx_tmp[2] = {};

    tx_tmp[0] = (uint8_t)subAddress | 0x00;
    tx_tmp[1] = data;

    HAL_GPIO_WritePin(gpio_type, gpio_pin, GPIO_PIN_RESET);

	HAL_SPI_Transmit(spi_pin, tx_tmp, 2, 10);

	HAL_GPIO_WritePin(gpio_type, gpio_pin, GPIO_PIN_SET);

	return 1;
}

int ICM42688::readRegisters(uint8_t subAddress, uint8_t count, uint8_t* dest) {

    uint8_t rx_tmp[2] = {};
    uint8_t tx_tmp[2] = {};

    for(uint8_t i = 0; i < count; i++){

        tx_tmp[0] = (uint8_t(subAddress) + i) | 0x80;
        tx_tmp[1] = 0x00;

        HAL_GPIO_WritePin(gpio_type, gpio_pin, GPIO_PIN_RESET);

        HAL_SPI_TransmitReceive(spi_pin, tx_tmp, rx_tmp, 2, 10);

        HAL_GPIO_WritePin(gpio_type, gpio_pin, GPIO_PIN_SET);

        dest[i] = rx_tmp[1];
    }

    return 1;
}
